# OOP_labs

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  dockerfile
LABS/1_lab/: CMakeLists.txt  main.cpp
LABS/1_lab/include/: replace.h
LABS/1_lab/src/: replace.cpp
LABS/1_lab/tests/: gtest.cpp
